Set up visual regression tests with puppeteer and jest-image-snapshot

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -14,7 +14,8 @@
     "precommit": "lint-staged",
     "publish-to-gh-pages": "npm run build && gh-pages --dist build/",
     "publish-to-npm": "npm run build && npm publish",
-    "start": "webpack-dev-server --open --config webpack.config.dev.js"
+    "start": "webpack-dev-server --open --config webpack.config.dev.js",
+    "test": "jest"
   },
   "lint-staged": {
     "{playground,src,test}/**/*.js": [
@@ -67,6 +68,7 @@
     "@material-ui/icons": "^4.5.1",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^8.0.6",
     "chai": "^3.3.0",
     "codemirror": "^5.30.0",
@@ -86,6 +88,9 @@
     "html": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.13.2",
+    "jest": "^26.0.1",
+    "jest-image-snapshot": "^4.0.0",
+    "jest-puppeteer": "^4.4.0",
     "jsdom": "^8.3.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^9.4.2",
@@ -95,6 +100,7 @@
     "monaco-editor-webpack-plugin": "^1.7.0",
     "nyc": "^13.2.0",
     "prettier": "^1.15.1",
+    "puppeteer": "^3.0.4",
     "react": "^16.9.0",
     "react-codemirror2": "^4.1.0",
     "react-dom": "^16.9.0",
@@ -106,6 +112,7 @@
     "rimraf": "^2.5.4",
     "sass": "^1.23.7",
     "sass-loader": "^7.3.1",
+    "serve": "^11.3.0",
     "sinon": "^7.5.0",
     "style-loader": "^0.13.1",
     "webpack": "^4.20.2",
