--- a/packages/fluent-ui/package.json
+++ b/packages/fluent-ui/package.json
@@ -2,9 +2,9 @@
   "name": "@rjsf/fluent-ui",
   "version": "2.0.0",
   "main": "dist/index.js",
-  "module": "dist/rjsf-material-ui.esm.js",
+  "module": "dist/rjsf-fluent-ui.esm.js",
   "typings": "dist/index.d.ts",
-  "description": "Material UI theme, fields and widgets for react-jsonschema-form",
+  "description": "Fluent UI theme, fields and widgets for react-jsonschema-form",
   "files": [
     "dist"
   ],
