--- a/packages/fluent-ui/package.json
+++ b/packages/fluent-ui/package.json
@@ -32,6 +32,7 @@
     "@rjsf/core": "^2.0.0",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.3",
+    "@types/lodash": "^4.14.152",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-test-renderer": "^16.9.2",
