--- a/packages/fluent-ui/package.json
+++ b/packages/fluent-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rjsf/fluent-ui",
+  "name": "@epicfaace/rjsf-fluent-ui",
   "version": "2.0.0",
   "main": "dist/index.js",
   "module": "dist/rjsf-fluent-ui.esm.js",
