--- a/packages/fluent-ui/package.json
+++ b/packages/fluent-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epicfaace/rjsf-fluent-ui",
-  "version": "2.0.0-alpha.2",
+  "version": "2.0.0-alpha.3",
   "main": "dist/index.js",
   "module": "dist/rjsf-fluent-ui.esm.js",
   "typings": "dist/index.d.ts",
@@ -67,6 +67,7 @@
   },
   "license": "Apache 2",
   "dependencies": {
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "lodash-es": "^4.17.15"
   }
 }
