--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@rjsf/semantic-ui",
   "version": "2.0.0",
-  "module": "dist/rjsf-semantic-ui.esm.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
   "description": "Semantic UI theme, fields and widgets for react-jsonschema-form",
   "lint-staged": {
     "{src,test}/**/*.js": [
@@ -10,10 +11,8 @@
       "git add"
     ]
   },
-  "main": "lib/index.js",
   "files": [
-    "dist",
-    "lib"
+    "dist"
   ],
   "engineStrict": false,
   "engines": {
@@ -21,12 +20,12 @@
     "node": ">=6"
   },
   "scripts": {
-    "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
-    "build:dist": "rimraf dist && cross-env NODE_ENV=production babel -d dist/ src/",
-    "dist": "npm run build:lib && npm run build:dist",
+    "build": "npm run dist:build:umd && npm run build:cjs && npm run build:es",
+    "build:cjs": "cross-env NODE_ENV=production BABEL_ENV=cjs babel --extensions \".js,.jsx,.ts,.tsx\" ./src --out-dir ./dist/cjs",
+    "build:es": "cross-env NODE_ENV=production BABEL_ENV=es babel --extensions \".js,.jsx,.ts,.tsx\" ./src --out-dir ./dist/es",
+    "dist:build:umd": "rimraf dist && cross-env NODE_ENV=production BABEL_ENV=umd webpack --config webpack.config.dist.js",
     "lint": "eslint src test",
-    "prepare": "npm run dist",
-    "precommit": "lint-staged"
+    "test": "cross-env NODE_ENV=test BABEL_ENV=test jest"
   },
   "peerDependencies": {
     "semantic-ui-react": "^0.87.3",
@@ -34,7 +33,7 @@
     "lodash": "^4.17.15",
     "shortid": "^2.2.14",
     "react": ">=16",
-    "@rjsf/core": "^2.0.0-alpha.6"
+    "@rjsf/core": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -46,7 +45,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
-    "@rjsf/core": "^2.0.0-alpha.6",
+    "@rjsf/core": "^2.0.0",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
