Enable antd (ant-design) support (#1561)
* Enable antd (ant-design) support

* Change name of package in local package.json for consistency

* Add local readme file

* Tidy the package dependencies

* Change README.md references to rjsf npm organisation

* Update package.json an dimports to reflect the new rjsf organization

* Deprecate antd custom withTheme as core now has forwardRef

* Ensure Theme is not default export for consistency

* Add scripts for building dist and lib in package.json

* Fix test to use non-default import

* Add babel-plugin-import to ensure styles are imported on demand

* Add rjsf-antd theme to the playground

* Migrate rjsf-antd code to antd v4 support

* Implement EmailWidget and URLWidget for rjsf-antd

* Reimplement rjsf-antd tests based on latest

* Enable rjsf-antd support in the playground

* Finalise rjsf-antd packages files

* Remove useless build:lib script

* Enable support for additionalProperties schemas

* Update the test snapshots

* Fix minor styling issues with descriptions

* Ensure popups are rendered next to fields (even when used with iframes)

* Implement AltDate/AltDateTimeWidgets for antd theme

* update package-lock

* Fix SelectWidget placeholder never being shown

* Fix issue with the alternative date pickers

* Fix issue with additionalProperties blanking out

* Change license for consistency

* Add semicolon

* build cjs, es, and umd

* antd - switch to new build process, fix global styles

Co-authored-by: Ashwin Ramaswami <aramaswamis@gmail.com>

--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -16,7 +16,7 @@
   "peerDependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
-    "@rjsf/core": "^2.0.0-alpha.6",
+    "@rjsf/core": "^2.0.0",
     "react": ">=16"
   },
   "devDependencies": {
