--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -39,12 +39,15 @@
   "dependencies": {
     "@babel/runtime-corejs2": "^7.4.5",
     "@material-ui/core": "^4.9.4",
+    "@rjsf/antd": "^2.0.0",
     "@rjsf/core": "^2.1.0",
     "@rjsf/material-ui": "^2.1.0",
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
     "json-schema-merge-allof": "^0.6.0",
     "jss": "^10.0.3",
+    "less": "^3.11.3",
+    "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
@@ -107,7 +110,7 @@
     "sass": "^1.23.7",
     "sass-loader": "^7.3.1",
     "sinon": "^7.5.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^1.2.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
