--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -20,7 +20,7 @@
     "node": ">=6"
   },
   "scripts": {
-    "build": "npm run dist:build:umd && npm run build:cjs && npm run build:es",
+    "build": "npm run build:cjs && npm run build:es",
     "build:cjs": "cross-env NODE_ENV=production BABEL_ENV=cjs babel --extensions \".js,.jsx,.ts,.tsx\" ./src --out-dir ./dist/cjs",
     "build:es": "cross-env NODE_ENV=production BABEL_ENV=es babel --extensions \".js,.jsx,.ts,.tsx\" ./src --out-dir ./dist/es",
     "dist:build:umd": "rimraf dist && cross-env NODE_ENV=production BABEL_ENV=umd webpack --config webpack.config.dist.js",
