--- a/packages/semantic-ui/test/.eslintrc
+++ b/packages/semantic-ui/test/.eslintrc
@@ -1,16 +1,5 @@
 {
   "env": {
-    "mocha": true,
-  },
-  "globals": {
-    d: true
-  },
-  "rules": {
-    "no-unused-vars": [
-      2,
-      {
-        "varsIgnorePattern": "^d$"
-      }
-    ]
+    "jest": true,
   }
 }
