--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -42,6 +42,7 @@
     "@rjsf/antd": "^2.0.0",
     "@rjsf/core": "^2.1.0",
     "@rjsf/material-ui": "^2.1.0",
+    "@rjsf/semantic-ui": "^2.0.0",
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
     "json-schema-merge-allof": "^0.6.0",
