--- a/packages/fluent-ui/package.json
+++ b/packages/fluent-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rjsf/fluent-ui",
-  "version": "2.0.0-alpha.4",
+  "version": "2.0.0",
   "main": "dist/index.js",
   "module": "dist/rjsf-fluent-ui.esm.js",
   "typings": "dist/index.d.ts",
@@ -15,7 +15,7 @@
   },
   "peerDependencies": {
     "@fluentui/react": "^7.114.2",
-    "@rjsf/core": "^2.0.0-alpha.6",
+    "@rjsf/core": "^2.0.0",
     "react": ">=16"
   },
   "devDependencies": {
