--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -41,6 +41,7 @@
     "@material-ui/core": "^4.9.4",
     "@rjsf/antd": "^2.0.0",
     "@rjsf/core": "^2.1.0",
+    "@rjsf/fluent-ui": "^2.0.0",
     "@rjsf/material-ui": "^2.1.0",
     "@rjsf/semantic-ui": "^2.0.0",
     "ajv": "^6.7.0",
