--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "rimraf dist && tsdx build",
-    "test": "tsdx test"
+    "test": "tsdx test --updateSnapshot"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.2.0",
