--- a/packages/bootstrap-4/package.json
+++ b/packages/bootstrap-4/package.json
@@ -18,7 +18,10 @@
     "@material-ui/icons": "^4.2.1",
     "@rjsf/core": "^2.0.0-alpha.6",
     "react-bootstrap": "^1.0.1",
-    "react": ">=16"
+    "react": ">=16",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
@@ -31,6 +34,9 @@
     "@material-ui/core": "^4.2.0",
     "react-bootstrap": "^1.0.1",
     "@material-ui/icons": "^4.2.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@rjsf/core": "^2.0.2",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.3",
