update repo urls and licenses

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -126,7 +126,7 @@
     "json-schema"
   ],
   "license": "Apache-2.0",
-  "homepage": "https://github.com/rjsf-team/react-jsonschema-form#readme",
+  "homepage": "https://github.com/rjsf-team/react-jsonschema-form",
   "publishConfig": {
     "access": "public"
   }
