--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -97,5 +97,5 @@
   "bugs": {
     "url": "https://github.com/rjsf-team/react-jsonschema-form/issues"
   },
-  "homepage": "https://github.com/rjsf-team/react-jsonschema-form#readme"
+  "homepage": "https://github.com/rjsf-team/react-jsonschema-form"
 }
