--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,8 @@
   base = ""
   publish = "packages/playground/build"
   command = "npm run bootstrap && npm run build"
+  # Ignore dependabot PRs for deploy previews
+  ignore = "git log -1 --pretty=%an | grep dependabot[bot]"
 
 [build.environment]
   SHOW_NETLIFY_BADGE = "true"
