Update rjsf theme readmes (#1827)
* Update @rjsf/semantic-ui readme

* update fluent ui

* add images

* more logo updates

* update all theme READMEs

* update main readme, too

* Fix licenses

* replace mozilla-services/ with rjsf-team/

* update repo urls and licenses

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "tabWidth": 2
   },
   "license": "Apache-2.0",
-  "homepage": "https://github.com/mozilla-services/react-jsonschema-form#readme",
+  "homepage": "https://github.com/rjsf-team/react-jsonschema-form",
   "devDependencies": {
     "husky": "^3.1.0"
   },
