--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -65,7 +65,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cybertec-postgresql/rjsf-material-ui.git"
+    "url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
   },
-  "license": "MIT"
+  "license": "Apache-2.0"
 }
