--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -118,9 +118,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mozilla-services/react-jsonschema-form.git"
+    "url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "@babel/runtime-corejs2": "^7.9.2",
     "semantic-ui-css": "^2.4.1",
