remove PUPPETEER_SKIP_CHROMIUM_DOWNLOAD

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -15,7 +15,7 @@
     "publish-to-gh-pages": "npm run build && gh-pages --dist build/",
     "publish-to-npm": "npm run build && npm publish",
     "start": "webpack-dev-server --open --config webpack.config.dev.js",
-    "test": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true jest"
+    "test": "jest"
   },
   "lint-staged": {
     "{playground,src,test}/**/*.js": [
