--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -15,7 +15,7 @@
     "publish-to-gh-pages": "npm run build && gh-pages --dist build/",
     "publish-to-npm": "npm run build && npm publish",
     "start": "webpack-dev-server --open --config webpack.config.dev.js",
-    "test": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true jest"
+    "test": "jest"
   },
   "lint-staged": {
     "{playground,src,test}/**/*.js": [
@@ -53,6 +53,7 @@
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
+    "puppeteer-core": "^4.0.1",
     "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "^0.33.1",
     "react-frame-component": "^4.1.1",
@@ -96,7 +97,7 @@
     "jest": "^25.5.4",
     "jest-image-snapshot": "^4.0.0",
     "jest-puppeteer": "^4.4.0",
-    "jest-puppeteer-docker": "^1.3.2",
+    "jest-puppeteer-docker": "^1.4.0",
     "jsdom": "^8.3.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^9.4.2",
@@ -106,7 +107,6 @@
     "monaco-editor-webpack-plugin": "^1.7.0",
     "nyc": "^13.2.0",
     "prettier": "^1.15.1",
-    "puppeteer": "^3.0.4",
     "react": "^16.9.0",
     "react-codemirror2": "^4.1.0",
     "react-dom": "^16.9.0",
