--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,11 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
-        node-version: [8.x, 9.x, 10.x, 11.x, 12.x, 13.x]
+        node-version: [13.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -29,6 +29,7 @@ jobs:
     - run: npm run cs-check
       env:
         CI: true
+    - run: START /B npm start
 
   deploy:
     runs-on: ubuntu-latest
