--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = ""
   publish = "packages/playground/build"
-  command = "npm run bootstrap && npm run build"
+  command = "npm run build"
   # Ignore dependabot PRs for deploy previews
   ignore = "git log -1 --pretty=%an | grep dependabot[bot]"
 
