--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -37,7 +37,9 @@
     "react": ">=16"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
     "@babel/runtime-corejs2": "^7.4.5",
+    "@fluentui/react": "^7.121.5",
     "@material-ui/core": "^4.9.4",
     "@rjsf/antd": "^2.2.0",
     "@rjsf/core": "^2.2.0",
@@ -45,7 +47,9 @@
     "@rjsf/material-ui": "^2.2.0",
     "@rjsf/semantic-ui": "^2.2.0",
     "ajv": "^6.7.0",
+    "antd": "^4.3.5",
     "core-js": "^2.5.7",
+    "dayjs": "^1.8.28",
     "json-schema-merge-allof": "^0.6.0",
     "jss": "^10.0.3",
     "less": "^3.11.3",
