--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,12 @@
 {
   "packages": [
-    "packages/*"
+    "packages/core",
+    
+    "packages/bootstrap-4",
+    
+    "packages/material-ui",
+    
+    "packages/playground"
   ],
   "version": "2.2.1"
 }
