--- a/packages/bootstrap-4/package.json
+++ b/packages/bootstrap-4/package.json
@@ -14,14 +14,14 @@
     "test": "tsdx test"
   },
   "peerDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@rjsf/core": "^2.0.0-alpha.6",
-    "react-bootstrap": "^1.0.1",
     "react": ">=16",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "@fortawesome/fontawesome-svg-core": "^1.2.29"
+    "react-bootstrap": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
@@ -31,12 +31,11 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.2.0",
-    "react-bootstrap": "^1.0.1",
-    "@material-ui/icons": "^4.2.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
     "@rjsf/core": "^2.0.2",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.3",
@@ -45,6 +44,7 @@
     "@types/react-test-renderer": "^16.9.2",
     "@types/sinon": "^9.0.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.13.1",
     "rimraf": "^2.6.3",
@@ -75,5 +75,8 @@
     "type": "git",
     "url": ""
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react-icons": "^3.10.0"
+  }
 }
