--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,10 @@ nav:
     - Other Internals: advanced-customization/internals.md
     - Contributing: contributing.md
   - API Reference:
-    - uiSchema: api-reference/uiSchema.md
+    - uiSchema:
+      - general: api-reference/uiSchema.md
+      - themes:
+        - semantic-ui: api-reference/themes/semantic-ui/uiSchema.md
     - "&lt;Form /&gt; props": api-reference/form-props.md
 
 markdown_extensions:
