--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,6 @@
 {
   "packages": [
-    "packages/core",
-    
-    "packages/bootstrap-4",
-    
-    "packages/material-ui",
-    
-    "packages/playground"
+    "packages/*"
   ],
   "version": "2.2.1"
 }
