--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -42,6 +42,7 @@
     "@fluentui/react": "^7.121.5",
     "@material-ui/core": "^4.9.4",
     "@rjsf/antd": "^2.2.2",
+    "@rjsf/bootstrap-4": "^2.2.2",
     "@rjsf/core": "^2.2.2",
     "@rjsf/fluent-ui": "^2.2.2",
     "@rjsf/material-ui": "^2.2.2",
