Fix the `module` path
Fix the `module` path, it should be ` dist/bootstrap-4.esm.js`

--- a/packages/bootstrap-4/package.json
+++ b/packages/bootstrap-4/package.json
@@ -2,7 +2,7 @@
   "name": "@rjsf/bootstrap-4",
   "version": "2.3.0",
   "main": "dist/index.js",
-  "module": "dist/rjsf-bootstrap-4.esm.js",
+  "module": "dist/bootstrap-4.esm.js",
   "typings": "dist/index.d.ts",
   "description": "Bootstrap 4 theme, fields and widgets for react-jsonschema-form",
   "files": [
