Added prettier to all packages, fixed FieldTemplate.tsx syntax error, removed cs-check and cs-format from packages and added on root level

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "changed": "lerna changed",
     "test": "lerna run test",
     "lint": "lerna run lint",
-    "cs-check": "lerna run cs-check",
-    "cs-format": "lerna run cs-format",
+    "cs-check": "prettier -l .",
+    "cs-format": "prettier --write .",
     "build": "lerna run --stream build",
     "start": "lerna run start --stream --parallel"
   },
