--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -65,6 +65,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
+    "prettier": "^2.1.1",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.8.6",
