--- a/packages/bootstrap-4/package.json
+++ b/packages/bootstrap-4/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-test-renderer": "^16.9.2",
     "@types/sinon": "^9.0.0",
+    "prettier": "^2.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.6",
