--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,8 +8,6 @@
     "build:es": "cross-env NODE_ENV=production BABEL_ENV=es babel --extensions \".js,.jsx,.ts,.tsx\" ./src --out-dir ./dist/es",
     "build:es:lib": "cross-env NODE_ENV=production BABEL_ENV=es babel --extensions \".js,.jsx,.ts,.tsx\" ./src --out-dir ./lib",
     "dist:build:umd": "rimraf dist && cross-env NODE_ENV=production BABEL_ENV=umd webpack --config webpack.config.dist.js",
-    "cs-check": "prettier -l \"{src,test}/**/*.js\"",
-    "cs-format": "prettier \"{src,test}/**/*.js\" --write",
     "lint": "eslint src test",
     "precommit": "lint-staged",
     "publish-to-npm": "npm run build && npm publish",
@@ -95,6 +93,7 @@
     "mocha": "^5.2.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "nyc": "^13.2.0",
+    "prettier": "^2.1.1",
     "react": "^16.9.0",
     "react-codemirror2": "^4.1.0",
     "react-dom": "^16.9.0",
