--- a/packages/fluent-ui/package.json
+++ b/packages/fluent-ui/package.json
@@ -13,6 +13,10 @@
     "build": "rimraf dist && tsdx build",
     "test": "tsdx test"
   },
+  "engineStrict": false,
+  "engines": {
+    "node": ">=10"
+  },
   "peerDependencies": {
     "@fluentui/react": "^7.114.2",
     "@rjsf/core": "^2.0.0",
