--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -31,8 +31,8 @@
     "@rjsf/core": "^2.0.0",
     "lodash": "^4.17.15",
     "react": ">=16",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.3",
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "1.2.1",
     "shortid": "^2.2.14"
   },
   "devDependencies": {
