--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rjsf/antd",
-  "version": "2.4.0",
+  "name": "@rjsf-koszti/antd",
+  "version": "1.0.0",
   "description": "Ant Design theme, fields and widgets for react-jsonschema-form",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -78,7 +78,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
+    "url": "git+https://github.com/koszti/react-jsonschema-form.git"
   },
   "keywords": [
     "antd",
@@ -93,9 +93,9 @@
   "author": "Delyan Ruskov <d.ruskov@gmail.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/rjsf-team/react-jsonschema-form/issues"
+    "url": "https://github.com/koszti/react-jsonschema-form/issues"
   },
-  "homepage": "https://github.com/rjsf-team/react-jsonschema-form",
+  "homepage": "https://github.com/koszti/react-jsonschema-form",
   "publishConfig": {
     "access": "public"
   }
