--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rjsf/material-ui",
-  "version": "2.4.0",
+  "name": "@rjsf-koszit/material-ui",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/material-ui.esm.js",
   "typings": "dist/index.d.ts",
@@ -65,7 +65,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
+    "url": "git+https://github.com/koszti/react-jsonschema-form.git"
   },
   "license": "Apache-2.0"
 }
