--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rjsf/playground",
-  "version": "2.4.0",
+  "name": "@rjsf-koszti/playground",
+  "version": "1.0.0",
   "description": "rjsf playground",
   "private": true,
   "scripts": {
@@ -129,7 +129,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
+    "url": "git+https://github.com/koszti/react-jsonschema-form.git"
   },
   "author": "Nicolas Perriault <nperriault@mozilla.com>",
   "keywords": [
@@ -138,7 +138,7 @@
     "json-schema"
   ],
   "license": "Apache-2.0",
-  "homepage": "https://github.com/rjsf-team/react-jsonschema-form",
+  "homepage": "https://github.com/koszti/react-jsonschema-form",
   "publishConfig": {
     "access": "public"
   }
