--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rjsf/semantic-ui",
-  "version": "2.4.0",
+  "name": "@rjsf-koszit/semantic-ui",
+  "version": "1.0.0",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
   "description": "Semantic UI theme, fields and widgets for react-jsonschema-form",
@@ -118,7 +118,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
+    "url": "git+https://github.com/koszti/react-jsonschema-form.git"
   },
   "license": "Apache-2.0",
   "dependencies": {
