--- a/packages/fluent-ui/package.json
+++ b/packages/fluent-ui/package.json
@@ -1,73 +1,69 @@
 {
-  "name": "@rjsf/fluent-ui",
-  "version": "2.4.0",
-  "main": "dist/index.js",
-  "module": "dist/fluent-ui.esm.js",
-  "typings": "dist/index.d.ts",
-  "description": "Fluent UI theme, fields and widgets for react-jsonschema-form",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "start": "tsdx watch",
-    "build": "rimraf dist && tsdx build",
-    "test": "tsdx test"
-  },
-  "peerDependencies": {
-    "@fluentui/react": "^7.114.2",
-    "@rjsf/core": "^2.0.0",
-    "react": ">=16"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.10.1",
-    "@fluentui/react": "^7.114.2",
-    "@material-ui/core": "^4.2.0",
-    "@material-ui/icons": "^4.2.1",
-    "@rjsf/core": "^2.4.0",
-    "@types/jest": "^24.0.15",
-    "@types/json-schema": "^7.0.3",
-    "@types/lodash": "^4.14.152",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-test-renderer": "^16.9.2",
-    "@types/sinon": "^9.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.0",
-    "react-test-renderer": "^16.13.1",
-    "rimraf": "^2.6.3",
-    "tsdx": "^0.13.1",
-    "tslib": "^2.0.0",
-    "typescript": "^3.5.3"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "author": "",
-  "keywords": [
-    "Fluent UI",
-    "react-jsonschema-form",
-    "jsonschema",
-    "json-schema",
-    "json",
-    "schema",
-    "form",
-    "react",
-    "material-ui",
-    "rjsf-material-ui"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
-  },
-  "license": "Apache-2.0",
-  "dependencies": {
-    "lodash": "^4.17.15",
-    "lodash-es": "^4.17.15"
-  }
+	"name": "@rjsf/fluent-ui",
+	"version": "2.4.0",
+	"main": "dist/index.js",
+	"module": "dist/fluent-ui.esm.js",
+	"typings": "dist/index.d.ts",
+	"description": "Fluent UI theme, fields and widgets for react-jsonschema-form",
+	"files": [ "dist" ],
+	"scripts": {
+		"start": "tsdx watch",
+		"build": "rimraf dist && tsdx build",
+		"test": "tsdx test"
+	},
+	"peerDependencies": {
+		"@fluentui/react": "^7.114.2",
+		"@rjsf/core": "^2.0.0",
+		"react": ">=16"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.0.0-0",
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+		"@babel/plugin-transform-modules-commonjs": "^7.8.3",
+		"@babel/plugin-transform-runtime": "^7.5.5",
+		"@babel/preset-env": "^7.5.5",
+		"@babel/preset-react": "^7.10.1",
+		"@fluentui/react": "^7.114.2",
+		"@rjsf/core": "^2.4.0",
+		"@types/jest": "^24.0.15",
+		"@types/json-schema": "^7.0.3",
+		"@types/lodash": "^4.14.152",
+		"@types/react": "^16.9.23",
+		"@types/react-dom": "^16.9.8",
+		"@types/react-test-renderer": "^16.9.2",
+		"@types/sinon": "^9.0.0",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.0",
+		"react-test-renderer": "^16.13.1",
+		"rimraf": "^2.6.3",
+		"tsdx": "^0.13.1",
+		"tslib": "^2.0.0",
+		"typescript": "^3.5.3"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"author": "",
+	"keywords": [
+		"Fluent UI",
+		"react-jsonschema-form",
+		"jsonschema",
+		"json-schema",
+		"json",
+		"schema",
+		"form",
+		"react",
+		"material-ui",
+		"rjsf-material-ui"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
+	},
+	"license": "Apache-2.0",
+	"dependencies": {
+		"lodash": "^4.17.15",
+		"lodash-es": "^4.17.15"
+	}
 }
