--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "postinstall": "lerna bootstrap",
     "publish": "lerna publish",
+    "prepare": "npm run build",
     "changed": "lerna changed",
     "test": "lerna run test",
     "lint": "lerna run lint",
