--- a/packages/chakra-ui/package.json
+++ b/packages/chakra-ui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@rjsf/chakra-ui",
-	"version": "2.4.0",
+	"version": "1.0.0",
 	"main": "dist/index.js",
 	"module": "dist/chakra-ui.esm.js",
 	"typings": "dist/index.d.ts",
@@ -14,7 +14,7 @@
 		"test": "tsdx test"
 	},
 	"peerDependencies": {
-		"@chakra-ui/core": "^1.0.0-rc.8",
+		"@chakra-ui/react": ">=1.2.0",
 		"@rjsf/core": "^2.0.0",
 		"react-icons": "^3.11.0",
 		"react": ">=16"
@@ -27,7 +27,9 @@
 		"@babel/plugin-transform-runtime": "^7.5.5",
 		"@babel/preset-env": "^7.5.5",
 		"@babel/preset-react": "^7.0.0",
-		"@chakra-ui/core": "^1.0.0-rc.8",
+		"@chakra-ui/react": ">=1.2.1",
+		"@emotion/react": "^11.1.4",
+		"@emotion/styled": "^11.0.0",
 		"@rjsf/core": "^2.4.0",
 		"@types/jest": "^24.0.15",
 		"@types/json-schema": "^7.0.3",
@@ -35,6 +37,7 @@
 		"@types/react-dom": "^16.9.5",
 		"@types/react-test-renderer": "^16.9.2",
 		"@types/sinon": "^9.0.0",
+		"framer-motion": "^3.3.0-beta.22",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-icons": "^3.11.0",
@@ -45,12 +48,12 @@
 		"typescript": "^3.5.3"
 	},
 	"publishConfig": {
+		"registry": "https://npm.pkg.github.com/",
 		"access": "public"
 	},
-	"author": "Andrew Miracle <me@andrewmiracle.com>",
+	"author": "Andrew Miracle <andrew@kpilens.com>",
 	"contributors": [
-		"Lorenz Henk <lorenz.henk@cybertec.at>",
-		"Andrew Miracle <me@andrewmiracle.com>"
+		"Andrew Miracle <andrew@kpilens.com>"
 	],
 	"keywords": [
 		"Chakra UI",
@@ -67,7 +70,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
+		"url": "git+https://github.com/kpilens/rjsf-chakra-ui.git"
 	},
 	"license": "Apache-2.0"
 }
