remove git-agg command from lint-staged

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,8 +22,7 @@
   "lint-staged": {
     "{src,test}/**/*.js": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "main": "dist/cjs/index.js",
