--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -7,8 +7,7 @@
   "lint-staged": {
     "{src,test}/**/*.js": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "files": [
