--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@department-of-veterans-affairs/react-jsonschema-form",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A simple React component capable of building HTML forms out of a JSON schema.",
   "scripts": {
     "build:readme": "toctoc README.md -w",
@@ -32,6 +32,7 @@
     "jsonschema": "^1.0.2",
     "lodash.topath": "^4.5.2",
     "prop-types": "^15.6.1",
+    "react-is": "^17.0.1",
     "setimmediate": "^1.0.5"
   },
   "devDependencies": {
@@ -60,10 +61,9 @@
     "html": "0.0.10",
     "jsdom": "^8.3.0",
     "mocha": "^2.5.3",
-    "react": "^15.0.0",
-    "react-addons-test-utils": "^15.3.2",
+    "react": "^16.14.0",
     "react-codemirror": "^0.2.3",
-    "react-dom": "^15.3.2",
+    "react-dom": "^16.14.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.3.3",
