--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,7 @@
 name: Release
 on:
-  # release:
-  #   types: [published]
-  pull_request:
-    branches: [ master ]
+  release:
+    types: [published]
 
 jobs:
   release_to_npm:
