--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -38,6 +38,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@babel/runtime-corejs2": "^7.4.5",
+    "@chakra-ui/react": "^1.3.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@fluentui/react": "^7.121.5",
     "@material-ui/core": "^4.9.4",
     "@rjsf/antd": "^2.5.1",
@@ -50,6 +53,7 @@
     "antd": "^4.3.5",
     "core-js": "^2.5.7",
     "dayjs": "^1.8.28",
+    "framer-motion": "^4.0.0",
     "json-schema-merge-allof": "^0.6.0",
     "jss": "^10.0.3",
     "less": "^3.11.3",
