--- a/packages/chakra-ui/package.json
+++ b/packages/chakra-ui/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "@rjsf/chakra-ui",
-	"version": "1.0.0",
+	"version": "2.5.1",
 	"main": "dist/index.js",
 	"module": "dist/chakra-ui.esm.js",
 	"typings": "dist/index.d.ts",
-	"description": "chakra UI theme, fields and widgets for react-jsonschema-form",
+	"description": "Chakra UI theme, fields and widgets for react-jsonschema-form",
 	"files": [
 		"dist"
 	],
