--- a/packages/chakra-ui/package.json
+++ b/packages/chakra-ui/package.json
@@ -27,13 +27,13 @@
 		"@babel/plugin-transform-runtime": "^7.5.5",
 		"@babel/preset-env": "^7.5.5",
 		"@babel/preset-react": "^7.0.0",
-		"@chakra-ui/react": ">=1.2.1",
-		"@emotion/react": "^11.1.4",
+		"@chakra-ui/react": "^1.2.1",
+		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.0.0",
 		"@rjsf/core": "^2.4.0",
 		"@types/jest": "^24.0.15",
 		"@types/json-schema": "^7.0.3",
-		"@types/react": "^16.9.23",
+		"@types/react": "^16.9.6",
 		"@types/react-dom": "^16.9.5",
 		"@types/react-test-renderer": "^16.9.2",
 		"@types/sinon": "^9.0.0",
