--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,9 @@ jobs:
       uses: actions/setup-node@v2.1.2
       with:
         node-version: ${{ matrix.node-version }}
-    - if: matrix.node-version == "8.x" || matrix.node-version == "9.x"
+    - if: ${{ matrix.node-version == "8.x" || matrix.node-version == "9.x" }}
       run: npm install
-    - if: matrix.node-version != "8.x" && matrix.node-version != "9.x"
+    - if: ${{ matrix.node-version != "8.x" && matrix.node-version != "9.x" }}
       run: npm ci
     - run: npm run build
     - run: npm test
