--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     - if: matrix.node-version == '14.x'
       uses: actions/upload-artifact@v2
       with:
-        name: build
+        name: dist
         path: packages/playground/build
     
   deploy_preview:
@@ -41,12 +41,12 @@ jobs:
       - name: Download built files
         uses: actions/download-artifact@v2
         with:
-          name: build
-          path: build
+          name: dist
+          path: dist
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
         with:
-          args: deploy --dir=build --alias="deploy-preview-${PR_NUMBER}"
+          args: deploy --dir=dist --alias="deploy-preview-${PR_NUMBER}"
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
@@ -61,14 +61,14 @@ jobs:
       - name: Download built files
         uses: actions/download-artifact@v2
         with:
-          name: build
-          path: build
+          name: dist
+          path: dist
       - name: Deploy playground
         uses: crazy-max/ghaction-github-pages@v2.2.0
         with:
           keep_history: true
           target-branch: gh-pages
-          build_dir: packages/playground/build
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
