Drop support for node 10, improve build process (#2299)
* Drop support for node 10, improve build process

* Update ci.yml

* rm node 15

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x, 14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-node@v2.1.2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+    - run: npm ci
     - run: npm run build
     - run: npm test
     - run: npm run lint
@@ -31,11 +31,11 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 13.x
+    - name: Use Node.js 14.x
       uses: actions/setup-node@v2.1.2
       with:
-        node-version: 13.x
-    - run: npm install
+        node-version: 14.x
+    - run: npm ci
     - run: npm run build
     - name: Deploy playground to GitHub Pages
       uses: crazy-max/ghaction-github-pages@v2.2.0
