--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
       - Theme-Specific Reference:
         - semantic-ui: api-reference/themes/semantic-ui/uiSchema.md
     - "&lt;Form /&gt; props": api-reference/form-props.md
+  - 3.x Migration: 3.x upgrade guide.md
 
 markdown_extensions:
   - toc:
