--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,7 @@
     "node": ">=12"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": "^16.0.0 || ^17.0.0"
   },
   "dependencies": {
     "@types/json-schema": "^7.0.7",
