--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,7 +38,7 @@
     "node": ">=12"
   },
   "peerDependencies": {
-    "react": "^16.0.0 || ^17.0.0"
+    "react": "^16.x || ^17.x"
   },
   "dependencies": {
     "@types/json-schema": "^7.0.7",
